# boto3-r53-automations

./: .gitignore  .pre-commit-config.yaml  IMPROVEMENTS.md  README.md  cli.py  main.py  pyproject.toml
docs/: build-research.md  implementation_plan.md
scripts/: create_hosted_zone.py  create_record.py  delete_record.py  list_hosted_zones.py  list_records.py  update_record.py
src/: records.py  route53_client.py  route53_operations.py  session_manager.py
src/utils/: error_handling.py  logging.py  rate_limiter.py
tests/: test_boto3_client.py  test_boto3_session.py  test_create_record.py  test_delete_record.py  test_error_handling.py  test_rate_limiter.py  test_update_record.py
