[project]
name = "boto3-r53-automations"
version = "0.1.0"
description = "A modular Route 53 automation tool for AWS DNS management"
readme = "README.md"
authors = [
    {name = "Tyler Zervas", email = "tyler@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.43",
    "botocore>=1.38.43",
]
keywords = ["aws", "route53", "dns", "automation", "boto3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/tzervas/boto3-r53-automations"
Repository = "https://github.com/tzervas/boto3-r53-automations"
Issues = "https://github.com/tzervas/boto3-r53-automations/issues"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.1",
    "moto>=5.1.6",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "flake8>=7.0.0",
    "pre-commit>=3.6.0",
    "pytest-cov>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "moto.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
